fix overflow in html drop

--- a/public/assets/less/source/toolbar.less
+++ b/public/assets/less/source/toolbar.less
@@ -153,12 +153,14 @@
             background: @toolbar--htmldrop__bg;
             color:@toolbar--htmldrop__color;
             height:@toolbar--htmldrop__theight;
+            overflow: scroll;
             text-align: left;
-            line-height: 1.2;
+            line-height: 1.25;
             padding:@toolbar--htmldrop__padding;
             border-radius: @editor--radius - 2;
             font-family: monospace;  /* monospace font */
             white-space: pre;        /* behave like <pre> */
+            font-size: @toolbar--htmldrop__font-size;
             .box-shadow(inset 0 0 4px 1px rgba(0,0,0,0.25));
 
             &:empty:before {
